alignment issues mostly fixed

--- a/style.css
+++ b/style.css
@@ -500,11 +500,7 @@ body {
 }
 
 /* Homepage */
-<<<<<<< HEAD
-/** issues with alignment taking place here **/
-=======
-/** don't forget about align editing branch happening here **/
->>>>>>> master
+
 .home {
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -527,6 +523,11 @@ body {
 	overflow: hidden;
 }
 
+.home img {
+	float: left;
+	border-radius: 50%;
+	margin-right: 10%;
+}
 .home .content h1 {
 	font-size: 46px;
 	font-family: 'Playfair Display', serif;
@@ -534,15 +535,17 @@ body {
 	color:  #ac39ac;
 	margin-bottom: 30px;
 }
-
+.home .content h3:first-of-type {
+	padding-top: 50px;
+}
 .home .content h3 {
 	font-size: 20px;
 	font-family: 'Playfair Display', serif;
 	font-weight: bold;
 	color:  #ac39ac;
-	margin-bottom: 20px;
+	margin: 10px 0px;
+	clear: both;
 }
-
 
 .home .content p {
 	font: 17px/1.9;
@@ -550,7 +553,10 @@ body {
 	width: 50%;
 	float:left;
 	clear: right;
-	margin-bottom: 34px;
+	margin-bottom: 15px;
+}
+.home .content p:first-of-type{
+	margin-top: 30px;
 }
 
 .home .content p a {
@@ -558,13 +564,14 @@ body {
 	color: #3b3b3b;
 }
 .home .content .social-btns {
-	margin-bottom: 30px;
+	margin-bottom: 25px;
+  display: inline;
 }
 .home .content .social-btns a {
-	display: inline-block;
-	width: 23px;
-	height: 23px;
-	margin-right: 5px;
+	display: inline;
+	width: 50px;
+	height: 26px;
+	margin-right: 8px;
 }
 .home .content .soc-icon.tw {
 	background: url(img/twitter-icon.png) no-repeat center 0;
@@ -608,4 +615,9 @@ body {
 	text-align: center;
 	float: left;
 	margin-bottom: 24px;
+}
+
+.alignleft {
+	display: inline;
+	float: left;
 }
